First stab at showing inputs and labels

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
 This should be hidden.
 </p>
 
+<form>
+<label for="fn">First Name</label><input id="fn">
+<label for="ln">Last Name</label><input id="ln">
+<input id="company" title="Company">
+</form>
+
 
 <script type="text/javascript" src="bookmarklet.js"></script>
 <script type="text/javascript">
