--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ This should be hidden.
 </form>
 
 
+<h2>Images</h2>
+
+<img src="about:black" width="100" height="100" alt="some image">
+
+
+
 <script type="text/javascript" src="bookmarklet.js"></script>
 <script type="text/javascript">
 	window.waiAriaView('');
