--- a/index.html
+++ b/index.html
@@ -4,153 +4,18 @@
 <head>
 	<title>ARIA View Testbed</title>
 
-	<style type="text/css">
-		body {
-			background-color:  red;
-		}
-	</style>
-
-
 </head>
 <body>
 
+<h1>ARIA View</h1>
 
-<h2>Ordinary Table</h2>
-<table>
-	<thead>
-		<tr>
-			<th>A</th>
-			<th>B</th>
-			<th>C</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>A1</td>
-			<td>B1</td>
-			<td>C1</td>
-		</tr>
-		<tr>
-			<td>A2</td>
-			<td>B2</td>
-			<td>C2</td>
-		</tr>
-	</tbody>
-</table>
+<p>ARIA View is a bookmarklet that reformats an HTML page to approximate how a page is perceived by assistive technology.
+If you're a developer, this is a great opportunity to <a href="https://github.com/pmcelhaney/wai-aria-stylesheet">get involved in an open source project</a> during the embryonic stage. If you're looking a polished tools that will help you make your web site more accessible, check out <a href="http://squizlabs.github.io/HTML_CodeSniffer/">HTML Codesniffer</a>.</p>	
+
+<p>To use the bookmarklet, drag this link up to your bookmarks bar: 
+<a href="javascript:(function(){ var root = 'http://patrickmcelhaney.com/wai-aria-stylesheet/'; var script=document.createElement('script');script.src=root+'bookmarklet.js';script.onload=function(){window.waiAriaView(root);};document.body.appendChild(script);}());">Aria View</a></p>
 
 
-<h2>WAI-ARIA Grid</h2>
-<div role="grid">
-
-
-	<div role="presentation">
-		<div role="row">
-			<div role="presentation"><div role="columnheader">A</div></div>
-			<div role="columnheader">B</div>
-			<div role="columnheader">C</div>
-		</div>
-
-		<div role="row">
-			<div role="gridcell">A1</div>
-			<div role="presentation">
-				<div role="gridcell">B1</div>
-				<div role="gridcell">C1</div>
-			</div>
-		</div>
-
-	</div>
-		<div role="row">
-			<div role="gridcell">A2</div>
-			<div role="gridcell">B2</div>
-			<div role="gridcell">C2</div>
-		</div>
-</div>
-
-
-<p aria-hidden="true">
-This should be hidden.
-</p>
-
-<h2>HTML Form</h2>
-
-<form>
-<label for="fn">First Name</label><input id="fn">
-<label for="ln">Last Name</label><input id="ln">
-<input id="company" title="Company">
-
-<select aria-label="State">
-<option>AK</option>
-<option>AL</option>
-<option>etc.</option>
-</select>
-
-
-<h3 id="comments-header">Comments</h3>
-<textarea aria-labelledby="comments-header">
-
-</textarea>
-
-</form>
-
-
-<h2>Images</h2>
-
-<img src="about:black" width="100" height="100" alt="some image">
-
-
-<h2>Examples from the WAI-ARIA Spec 5.7.2.4-5</h2>
-
-<ul role="menubar">
- 
- <!-- Rule 2A: "File" label via aria-labelledby -->
-  <li role="menuitem" aria-haspopup="true" aria-labelledby="fileLabel"><span id="fileLabel">File</span>
-    <ul role="menu">
-
-      <!-- Rule 2C: "New" label via Namefrom:contents -->
-      <li role="menuitem">New</li>
-      <li role="menuitem">Open&hellip;</li>
-    </ul>
-  </li>
-</ul>
-
-<fieldset>
-  <legend>Meeting alarms</legend>
-
-  <!-- Rule 2A: "Beep" label given by native HTML label element -->
-  <input type="checkbox" id="beep"> <label for="beep">Beep</label> <br>
-  <input type="checkbox" id="mtgTitle"> <label for="mtgTitle">Display the meeting title</label> <br>
-
-  <!-- Rule 2B: Full label of checkbox includes value ("3") of embedded text input, "Flash the screen 3 times" -->
-  <input type="checkbox" id="flash">
-  <label for="flash">
-    Flash the screen
-
-    <!-- Rule 2A: label of text input given by aria-label, "Number of times to flash screen" -->
-    <input type="text" value="3" size="2" id="numTimes" aria-label="Number of times to flash screen">
-    times
-  </label><br>
-
-  <input type="checkbox" id="rotate">
-  <label for="rotate">
-  	Rotate the screen by 
-
-  		<select aria-label="degrees to rotate the screen">
-  			<option selected>90</option>
-  			<option>180</option>
-  			<option>270</option>
-  		</select>
-
-  		degrees
-
-  </label>
-
-</fieldset>
-
-
-<script type="text/javascript" src="bookmarklet.js"></script>
-<script type="text/javascript">
-	window.waiAriaView('');
-</script>
-
+<p><a href="test.html">test page</a></p>
 </body>
 </html>
