--- a/index.html
+++ b/index.html
@@ -3,19 +3,64 @@
 <html>
 <head>
 	<title>ARIA View Testbed</title>
+	<style type="text/css">
+		body {
+			font-family: sans-serif;
+			max-width: 600px;
+			margin: 0 auto;
+		}
 
+		h1 {
+			text-align: center;
+			font-size: 3em;
+		}
+
+
+    	.bookmarklet {
+    		font-size: 2em;
+	        text-decoration: none;
+	        border: 3px solid gray;
+	        padding: 3px;
+	        border-radius: 20px;
+	        margin: 5px auto;
+	        display: block;
+	        width: 400px;
+	        text-align: center;
+	        background-color: #ccc;
+	        color: black;
+    	}
+
+
+
+
+	</style>
 </head>
 <body>
 
-<h1>ARIA View</h1>
-
-<p>ARIA View is a bookmarklet that reformats an HTML page to approximate how a page is perceived by assistive technology.
-If you're a developer, this is a great opportunity to <a href="https://github.com/pmcelhaney/wai-aria-stylesheet">get involved in an open source project</a> during the embryonic stage. If you're looking a polished tools that will help you make your web site more accessible, check out <a href="http://squizlabs.github.io/HTML_CodeSniffer/">HTML Codesniffer</a>.</p>	
-
-<p>To use the bookmarklet, drag this link up to your bookmarks bar: 
-<a href="javascript:(function(){ var root = 'http://patrickmcelhaney.com/wai-aria-stylesheet/'; var script=document.createElement('script');script.src=root+'bookmarklet.js';script.onload=function(){window.waiAriaView(root);};document.body.appendChild(script);}());">Aria View</a></p>
+<h1>ARIA View Bookmarklet</h1>
 
 
-<p><a href="test.html">test page</a></p>
+<p>Do you ever wonder what it's like to browse your web app as a <strong>blind person</strong>?</p>
+
+<p>Have you been charged with making your web app more <strong>accessible</strong>?</p>
+
+<p>If so, you should probably take the time to learn how to use a screen reader such as JAWS or VoiceOver. There's no 
+substitute for diving in and experiencing for yourself the challenges a visually impaired user faces when using your app.
+However, testing code with a screen reader can feel unfamiliar and time-consuming for a developer with normal eyesight. Wouldn't
+it be great if <strong>we could just see what a screen reader "sees"</strong>?
+
+<p>ARIA View is an attempt at such a tool. It reformats an HTML page to approximate how a page is perceived by assistive technology. It's super easy to use. Just <strong>drag this button up to the bookmarks bar in your browser</strong>. Then click the "bookmark" while you're inside your web application or site.</p>
+
+<p>
+<a class="bookmarklet" href="javascript:(function(){ var root = 'http://patrickmcelhaney.com/wai-aria-stylesheet/'; var script=document.createElement('script');script.src=root+'bookmarklet.js';script.onload=function(){window.waiAriaView(root);};document.body.appendChild(script);}());">Aria View</a></p>
+
+
+
+
+<p>ARIA View is useful, but still very new. If you're looking a polished tools that will help you make your web site more accessible, check out <a href="http://squizlabs.github.io/HTML_CodeSniffer/">HTML Codesniffer</a>.</p>	
+
+
+<p>If you're a developer, this is a great opportunity to <a href="https://github.com/pmcelhaney/wai-aria-stylesheet">get involved in an open source project</a> during the embryonic stage.</p>
+
 </body>
 </html>
