--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ it be great if <strong>we could just see what a screen reader "sees"</strong>?
 
 
 
-<p>ARIA View is already super useful, but it's still under development. If you're looking a polished that will help you make your web site more accessible, check out <a href="http://squizlabs.github.io/HTML_CodeSniffer/">HTML Codesniffer</a>.</p>	
+<p>ARIA View is already super useful, but it's still under development. If you're looking a polished tool that will help you make your web site more accessible, check out <a href="http://squizlabs.github.io/HTML_CodeSniffer/">HTML Codesniffer</a>.</p>	
 
 
 <p>If you're a developer, this is a great opportunity to <a href="https://github.com/pmcelhaney/wai-aria-stylesheet">get involved in an open source project</a> during the embryonic stage.</p>
