Use SSL and explanatory note

--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@ it be great if <strong>we could just see what a screen reader "sees"</strong>?
 <p>ARIA View is an attempt at such a tool. It reformats an HTML page to approximate how a page is perceived by assistive technology. It's super easy to use. Just <strong>drag this button up to the bookmarks bar in your browser</strong>. Then click the "bookmark" while you're inside your web application or site.</p>
 
 <p>
-<a class="bookmarklet" href="javascript:(function(){ var root = 'https://raw.github.com/pmcelhaney/wai-aria-stylesheet/'; var script=document.createElement('script');script.src=root+'bookmarklet.js';script.onload=function(){window.waiAriaView(root);};document.body.appendChild(script);}());">Aria View</a></p>
-
-
-
+<a class="bookmarklet" href="javascript:(function(){ var root = 'https://patrickmcelhaney.com/wai-aria-stylesheet/'; var script=document.createElement('script');script.src=root+'bookmarklet.js';script.onload=function(){window.waiAriaView(root);};document.body.appendChild(script);}());">Aria View</a></p>
 
 <p>ARIA View is already super useful, but it's still under development. If you're looking a polished tool that will help you make your web site more accessible, check out <a href="http://squizlabs.github.io/HTML_CodeSniffer/">HTML Codesniffer</a>.</p>	
 
